= RubyMotion 2.39 =

  * [iOS] Enabled arm64 support by default for iOS projects. 
  * [iOS] Honour explicit `device_name` or `target` specified by user.
    Specifying both is disallowed, because a device is configured for a
    specific SDK.
  * [iOS] Fixed a regression where Extension and Frameworks could not build for
    iOS device.
  * [iOS] Fixed a bug where `rake spec' would return 0 as exit code even if it
    will fail with crash.
  * [iOS] Fixed a bug where #tap and #rotate_device cause a crash when it run
    `rake spec' with x86_64.
  * Fixed a bug where wrong Boxed object will be returned from Objective-C method.
  * Fixed the `motion support' command invocation to print both the stable and
    pre-release versions of RubyMotion.
  * Fixed a bug which it would triggered "Symbol not found" when it will use a
    constant which is not contained in older SDK.

= RubyMotion 2.38 =

  * Optimized the app executable size when a project has too many Ruby source
    files, by removing unnecessary internal code. ~30-60% lighter.
  * Disabled armv7s support for iOS projects. If you want to add armv7s support
    back, simply add the 'armv7s' value to the `app.archs['iPhoneOS']' config
    in the project's Rakefile. This architecture is no longer enabled by
    default in Xcode.
  * Fixed a bug where a compiled Core Data model would be removed when cleaning
    when an original `xcdatamodeld' was not available.
  * Fixed a bug where in certain circumstances cleaning would try to be
    performed when the vendor dir, e.g. `vendor/Pods' did not exist.
  * Fixed a few cases where the Yosemite version number was parsed incorrectly.
  * Added support for `axel' as an alternative to `curl' when downloading
    updates, which supports resuming and uses 10 connections to improve speed.
    Axel is available from http://wilmer.gaast.net/main.php/axel.html or can be
    installed through Homebrew: `$ brew install axel'.