@@ -1,5 +1,0 @@
-class AppDelegate
-  def application(application, didFinishLaunchingWithOptions:launchOptions)
-    true
-  end
-end
