@@ -1,0 +1,15 @@
+class AppDelegate
+  def application(application, didFinishLaunchingWithOptions:launchOptions)
+    rootViewController = UIViewController.alloc.init
+    rootViewController.title = '<%= name %>'
+    rootViewController.view.layer.backgroundColor = UIColor.whiteColor.CGColor
+
+    navigationController = UINavigationController.alloc.initWithRootViewController(rootViewController)
+
+    @window = UIWindow.alloc.initWithFrame(UIScreen.mainScreen.bounds)
+    @window.rootViewController = navigationController
+    @window.makeKeyAndVisible
+
+    true
+  end
+end
